k8s-practice/busybox-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ping-pod
  labels:
    app: pingpod
spec:
  containers:
    - name: ping-container
      image: busybox:latest
      ports:
        - containerPort: 80
      securityContext:
        runAsUser: 0
        allowPrivilegeEscalation: true
        capabilities:
          add: ["NET_RAW"]        
      command: ["ping"]
      args: ["-c", "60", "google.com"]
