k8s-practice/multi-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: multi-container-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
    - name: redis-container
      image: redis:latest  
      ports:
        - containerPort: 80
