k8s-practice/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
    - image: nginx
      name: nginx
      resources:
        requests:
          memory: "128Mi"
          cpu: "0.5"
        limits:
          memory: "512Mi"
          cpu: "1"
