k8s-practice/loadbalancer-serivce.yaml
apiVersion: v1
kind: Service
metadata: 
  name: lb-service
spec:
  type: LoadBalancer
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
