k8s-practice/nodeport-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nodeport-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
