k8s-practice/pathbased-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: path-based-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: app-1-service
                port:
                  number: 80
            path: /app-1
            pathType: Exact
          - backend:
              service:
                name: app-2-service
                port:
                  number: 80
            path: /app-2
            pathType: Exact
